# PylonCamera

./: .gitignore  20170516-激光散斑成像系统CCD相机数据采集与控制软件设计-艾贺-初稿3-Yongzhao.doc  CMakeCache.txt  CMakeLists.txt  Makefile  MyCamera.cbp  MyCamera.pro  Project.cbp  TODO.txt  aboutdialog.cpp  aboutdialog.ui  cmake_install.cmake  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myfram.cpp  myfram.h  myfram.ui  readme.md  settingdialog.cpp  settingdialog.h  settingdialog.ui  settings.cpp  settings.h  ui_aboutdialog.h  ui_mainwindow.h  ui_myfram.h  ui_settingdialog.h
paper/: 20170516-激光散斑成像系统CCD相机数据采集与控制软件设计-艾贺-初稿3-Yongzhao.doc  20170516-激光散斑成像系统CCD相机数据采集与控制软件设计-艾贺-初稿4.doc  20170527-激光散斑成像系统CCD相机数据采集与控制软件设计（终稿）-1395121001-艾贺.doc  激光散斑系统CCD相机数据采集控制软件设计 - 副本.ppt  激光散斑系统CCD相机数据采集控制软件设计.ppt
